applications/infrastructure/overlays/razorcrest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "google-cas"
spec:
  rules:
    - host: argocd.razorcrest.spaceship-moon.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.razorcrest.spaceship-moon.com
      secretName: argocd-secret-tls
